enhancing styles product item

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@
 @tailwind utilities;
 
 
+.item-title{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: pre-wrap;
+    display: -webkit-box; 
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
